environments/gloo-edge/edge.glooplatform.com/rollouts-demo/strategies/canary-single-rt/base/rollouts-demo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: rollouts-demo
spec:
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 32Mi
      serviceAccount: rollouts-demo
  strategy:
    canary:
      stableService: rollouts-demo-active
      canaryService: rollouts-demo-preview
      trafficRouting:
        plugins:
          solo-io/glooedge:
            routeTable:
              name: rollouts-demo-routes
              namespace: gloo-system
      steps:
      - setWeight: 10
      - pause: {duration: 5}
      - setWeight: 25
      - pause: {}
      - setWeight: 50
      - pause: {duration: 5}
      - setWeight: 75
      - pause: {duration: 5}
      - setWeight: 100
      - pause: {duration: 5}
      analysis:
        templates:
        - templateName: pass
        startingStep: 3
